--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,104 @@
 <!DOCTYPE html>
 <html lang="fr">
 <header>
+    <title>Auditon</title>
     <link rel="stylesheet" href="MusicPlayer.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"
-        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script></header>
-<body>
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+</header>
 
+<body>
+    <div class="forms">
+        <form action="Index.html" class='form inscription'>
+            <div class="formdiv register">
+                <h1>Inscription</h1>
+                <p>Veuillez vous inscrire pour utiliser ce site</p>
+
+                <label for="Nickname"><b>Pseudo :</b></label>
+                <input type="text" placeholder="Pseudo" name="Nickname" id="Nickname">
+
+                <label for="Email"><b>E-mail :</b></label>
+                <input type="text" placeholder="E-mail" name="email" id="Email">
+
+                <label for="psw"><b>Mot de passe :</b></label>
+                <input type="password" placeholder="Mot de passe" name="psw" id="psw">
+
+                <label for="psw2"><b>Confirmez votre mot de passe :</b></label>
+                <input type="password" placeholder="Mot de passe" name="psw2" id="psw2">
+                <br>
+                <button type="submit" class="submit">Valider</button>
+            </div>
+            <div class="formdiv registerbtn btn">
+                <p>Déjà inscrit? <a href='http://google.com' class='Login'>Connexion</a>.</p>
+            </div>
+        </form>
+        <form action="index.html" class='formcon connexion'>
+            <div class="formdiv connect">
+                <h1>Connexion</h1>
+                <p>Veuillez vous connecter pour utiliser ce site</p>
+
+                <label for="Emailcon"><b>E-mail :</b></label>
+                <input type="text" placeholder="E-mail" name="emailcon" id="Emailcon">
+
+                <label for="pswcon"><b>Mot de passe :</b></label>
+                <input type="password" placeholder="Mot de passe" name="pswcon" id="pswcon">
+                <br>
+                <button type="submit" class="submit">Valider</button>
+            </div>
+
+            <div class="formdiv connexionbtn btn">
+                <p>Pas encore inscrit? <a href='http://google.com' class='Login'>Inscription</a>.</p>
+            </div>
+        </form>
+    </div>
+    <div class="MusicHall">
+        <div class="nav">
+            <input type="text" placeholder="Recherche..." class="Search">
+            <div class="liens">
+                <a href="index.html">Accueil</a>
+                <a href="#">Favoris</a>
+                <a href="#">Playlist</a>
+            </div>
+        </div>
+        <div class="corps">
+            aze<br>
+            aze<br>
+            aze<br>
+            aze<br>
+            aze<br>
+            aze<br>
+            aze<br>
+            aze<br>
+            aze<br>
+            aze<br>
+            aze<br>
+            aze<br>
+            aze<br>
+
+            aze<br>
+            aze<br>
+            aze<br>
+            aze<br>
+            aze<br>
+            aze<br>
+            aze<br>
+            aze<br>
+            aze<br>
+            aze<br>
+            aze<br>
+            aze<br>
+            aze<br>
+            aze<br>
+            aze<br>
+            aze<br>
+            aze<br>
+            aze<br>
+        </div>
+        <div class="footer">
+            aze
+        </div>
+    </div>
+    <script src="MusicPlayer.js"></script>
 </body>
+
 </html>
