--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <header>
-    <title>Auditon</title>
+    <title>Audioton</title>
     <link rel="stylesheet" href="MusicPlayer.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
@@ -12,7 +12,7 @@
         <form action="Index.html" class='form inscription'>
             <div class="formdiv register">
                 <h1>Inscription</h1>
-                <p>Veuillez vous inscrire pour utiliser ce site</p>
+                <p class='whitet'>Veuillez vous inscrire pour utiliser ce site</p>
 
                 <label for="Nickname"><b>Pseudo :</b></label>
                 <input type="text" placeholder="Pseudo" name="Nickname" id="Nickname">
@@ -29,13 +29,13 @@
                 <button type="submit" class="submit">Valider</button>
             </div>
             <div class="formdiv registerbtn btn">
-                <p>Déjà inscrit? <a href='http://google.com' class='Login'>Connexion</a>.</p>
+                <p class='whitet'>Déjà inscrit? <a href='http://google.com' class='Login'>Connexion</a>.</p>
             </div>
         </form>
         <form action="index.html" class='formcon connexion'>
             <div class="formdiv connect">
                 <h1>Connexion</h1>
-                <p>Veuillez vous connecter pour utiliser ce site</p>
+                <p class='whitet'>Veuillez vous connecter pour utiliser ce site</p>
 
                 <label for="Emailcon"><b>E-mail :</b></label>
                 <input type="text" placeholder="E-mail" name="emailcon" id="Emailcon">
@@ -47,12 +47,16 @@
             </div>
 
             <div class="formdiv connexionbtn btn">
-                <p>Pas encore inscrit? <a href='http://google.com' class='Login'>Inscription</a>.</p>
+                <p class='whitet'>Pas encore inscrit? <a href='http://google.com' class='Login'>Inscription</a>.</p>
             </div>
         </form>
     </div>
     <div class="MusicHall">
         <div class="nav">
+            <div class="logo">
+                <img class='LogoAudio' src="Audioton.png" alt="Audioton"> <br>
+                Audioton
+            </div>
             <input type="text" placeholder="Recherche..." class="Search">
             <div class="liens">
                 <a href="index.html">Accueil</a>
@@ -74,7 +78,6 @@
             aze<br>
             aze<br>
             aze<br>
-
             aze<br>
             aze<br>
             aze<br>
@@ -95,7 +98,10 @@
             aze<br>
         </div>
         <div class="footer">
-            aze
+            <audio controls>
+                <source src="" type='audio/mpeg'>
+                Your browser does not support the audio element.
+            </audio>
         </div>
     </div>
     <script src="MusicPlayer.js"></script>
