--- a/Index.html
+++ b/Index.html
@@ -25,6 +25,11 @@
 
                 <label for="psw2"><b>Confirmez votre mot de passe :</b></label>
                 <input type="password" placeholder="Mot de passe" name="psw2" id="psw2">
+
+                <label for="profilpic"><b>Image de profile :</b></label>
+                <br>
+                <input type="file" name="profilpic" id="profilpic" capture>
+                <!--https://www.codegrepper.com/code-examples/html/html+input+file+upload+image+for+profile+picture-->
                 <br>
                 <button type="submit" class="submit">Valider</button>
             </div>
@@ -45,63 +50,81 @@
                 <br>
                 <button type="submit" class="submit">Valider</button>
             </div>
-
             <div class="formdiv connexionbtn btn">
                 <p class='whitet'>Pas encore inscrit? <a href='http://google.com' class='Login'>Inscription</a>.</p>
             </div>
         </form>
     </div>
     <div class="MusicHall">
-        <div class="nav">
-            <div class="logo">
-                <img class='LogoAudio' src="Audioton.png" alt="Audioton"> <br>
-                Audioton
+        <div class="top">
+            <div class="nav">
+                <div class="logo">
+                    <img class='LogoAudio' src="Audioton.png" alt="Audioton"> <br>
+                    Audioton
+                </div>
+                <input type="text" placeholder="Recherche..." class="Search">
+                <div class="liens">
+                    <a href="index.html">Accueil</a>
+                    <a href="#">Favoris</a>
+                    <a href="#">Playlist</a>
+                </div>
             </div>
-            <input type="text" placeholder="Recherche..." class="Search">
-            <div class="liens">
-                <a href="index.html">Accueil</a>
-                <a href="#">Favoris</a>
-                <a href="#">Playlist</a>
+            <div class="corps">
+                <div class="corpsheader">
+                    <img src='Profile.jpg' alt="Image de profile" id='ImgPfl'>
+                    <b><span id="ID"></span></b>
+                </div>
+                aze1<br><hr>
+                aze2<br><hr>
+                aze3<br><hr>
+                aze4<br><hr>
+                aze5<br><hr>
+                aze6<br><hr>
+                aze7<br><hr>
+                aze8<br><hr>
+                aze9<br><hr>
+                aze0<br><hr>
+                aze1<br><hr>
+                aze2<br><hr>
+                aze3<br><hr>
+                aze4<br><hr>
+                aze5<br><hr>
+                aze6<br><hr>
+                aze7<br><hr>
+                aze8<br><hr>
+                aze9<br><hr>
+                aze0<br><hr>
+                aze1<br><hr>
+                aze2<br><hr>
+                aze3<br><hr>
+                aze4<br><hr>
+                aze5<br><hr>
+                aze7<br><hr>
+                aze6<br><hr>
+                aze8<br><hr>
+                aze9<br><hr>
+                aze0<br><hr>
+                aze1<br><hr>
             </div>
-        </div>
-        <div class="corps">
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
-            aze<br>
         </div>
         <div class="footer">
+            <div id="wrapper">
+                <div id='player'>
+                    <audio id="music_player">
+                        <source src="music/sample_music.mp3" />
+                    </audio>
+                    <input type="image" src="images/play.png" onclick="play_aud()" id="play_button">
+                    <input type="image" src="images/pause.png" onclick="pause_aud()" id="play_button">
+                    <img src="images/volume.png" id="vol_img">
+                    <input type="range" id="change_vol" onchange="change_vol()" step="0.05" min="0" max="1" value="1">
+                </div>
+            </div>
+            <!--http://talkerscode.com/webtricks/create-custom-audio-player-using-html5-and-javascript.php
             <audio controls>
                 <source src="" type='audio/mpeg'>
                 Your browser does not support the audio element.
             </audio>
+            <input type="range">-->
         </div>
     </div>
     <script src="MusicPlayer.js"></script>
