--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
 
                 <label for="profilpic"><b>Sélectionnez une image de profile :</b></label>
                 <br>
-                <input type="radio" id="AvatarChoice1" name="Avatar" value="Avatar-1.png" class="Hiddenbox" checked>
+                <input type="radio" id="AvatarChoice1" name="Avatar" value="Avatar-1.png" class="Hiddenbox">
                 <label for="AvatarChoice1">
                     <img src="Avatar-1.png" alt="Avatar-1" class="Avatar">
                 </label>
@@ -84,7 +84,6 @@
                     <div class="dropdown">
                         <img src='' alt="Image de profile" id='ImgPfl'>
                         <div class="dropdown-content">
-                            <a href='#'>Changer l'avatar</a>
                             <a href='#' id="Deco">Déconnexion</a>
                         </div>
                     </div>
