Clique fonctionne pas je comprend rien

--- a/Index.html
+++ b/Index.html
@@ -88,72 +88,29 @@
                         </div>
                     </div>
                 </div>
-                aze1<br>
-                <hr>
-                aze2<br>
-                <hr>
-                aze3<br>
-                <hr>
-                aze4<br>
-                <hr>
-                aze5<br>
-                <hr>
-                aze6<br>
-                <hr>
-                aze7<br>
-                <hr>
-                aze8<br>
-                <hr>
-                aze9<br>
-                <hr>
-                aze0<br>
-                <hr>
-                aze1<br>
-                <hr>
-                aze2<br>
-                <hr>
-                aze3<br>
-                <hr>
-                aze4<br>
-                <hr>
-                aze5<br>
-                <hr>
-                aze6<br>
-                <hr>
-                aze7<br>
-                <hr>
-                aze8<br>
-                <hr>
-                aze9<br>
-                <hr>
-                aze0<br>
-                <hr>
-                aze1<br>
-                <hr>
-                aze2<br>
-                <hr>
-                aze3<br>
-                <hr>
-                aze4<br>
-                <hr>
-                aze5<br>
-                <hr>
-                aze7<br>
-                <hr>
-                aze6<br>
-                <hr>
-                aze8<br>
-                <hr>
-                aze9<br>
-                <hr>
-                aze0<br>
-                <hr>
-                aze1<br>
-                <hr>
+                <table id="librairy">
+                    <thead>
+                        <tr>
+                            <th class='Nbr'></th>
+                            <th class="Title"><b>Titre</b></th>
+                            <th class="Artist"><b>Artiste</b></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
             </div>
         </div>
         <div class="footer">
             <div id="wrapper">
+                <img src='' class="Cover" alt="Cover">
+                <div class='col'>
+                <label for="MusicP" id='labeling'><span id='Label'></span> - <span id='Label2'></span></label>
+                <audio class="Player" id='MusicP' controls src="">
+                    Your browser does not support the
+                    <code>audio</code> element.
+                </audio>
+                </div>
                 <!-- <div id='player'>
                     <audio id="music_player">
                         <source src="music/sample_music.mp3" />
